[gd_scene load_steps=4 format=2]

[ext_resource path="res://Miriya/GroundImages/thorns_bush.png" type="Texture" id=1]
[ext_resource path="res://Miriya/Object_Scripts/thorns_bush.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.2328, 36.9049 )

[node name="thorns_bush2" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.905882, 1, 0.827451, 1 )
position = Vector2( 0.523804, -15.5735 )
scale = Vector2( 0.191968, 0.232007 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.162537, -1.95355 )
shape = SubResource( 1 )

[node name="ConstantDamageTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_thorns_bush_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_thorns_bush2_body_exited"]
[connection signal="timeout" from="ConstantDamageTimer" to="." method="_on_ConstantDamageTimer_timeout"]
